# meeting-capture

./: .gitignore  README.md  pyproject.toml  setup.sh
src/meeting_capture/: cli.py  daemon.py  mic.py  paths.py  recorder.py  transcriber.py  watchdog.py
swift/: Package.swift
swift/Sources/sysaudio/: main.swift
tests/: test_cli.py  test_daemon.py  test_mic.py  test_paths.py  test_recorder.py  test_transcriber.py
