[project]
name = "meeting-capture"
version = "0.1.0"
description = "Always-on audio capture daemon — system audio to transcripts on disk via hosted Gemini transcription."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "soundfile>=0.12",
    # Hosted Gemini audio transcription. Needs a Google API key from
    # $GOOGLE_API_KEY, $GEMINI_API_KEY, or ~/.config/google/key (mode 600).
    "google-genai>=0.3",
]

[project.scripts]
meeting-capture = "meeting_capture.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_capture"]
